--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,11 @@
 src = 'src'
 out = 'out'
 libs = ["node_modules", "lib"]
+remappings = [
+    "ds-test/=lib/forge-std/lib/ds-test/src/",
+    "forge-std/=lib/forge-std/src/",
+    "@openzeppelin/=lib/openzeppelin-contracts/"
+]
 
 verbosity = 4
 
