--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 PRIVATE_KEY = 
 GOERLI_RPC_URL = https://goerli.infura.io/v3/
-ETHERSCAN_API_KEY = 
+ETHERSCAN_KEY = 
+
+
+# forge script src/script/NFT.s.sol:NFTScript --rpc-url $GOERLI_RPC_URL --private-key $PRIVATE_KEY --broadcast --verify --etherscan-api-key $ETHERSCAN_KEY -vvvv
